--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,5 +1,4 @@
-name: Production
-
+name: Build and Deploy
 on:
   push:
     branches:
@@ -10,8 +9,8 @@ jobs:
     runs-on: self-hosted
 
     strategy:
-    matrix:
-      node-version: [20.x]
+      matrix:
+        node-version: [20.x]
     
     steps:
     - uses: actions/checkout@v3
